--- a/style.css
+++ b/style.css
@@ -323,8 +323,7 @@ font-size: 3rem;
 }
 }
 
-@media screen and (min-width: 992px) {
-  
+@media screen and (min-width: 992px) {  
   .button-container{   
    flex:0 0 70%; 
 }
@@ -345,11 +344,7 @@ font-size: 5rem;
 };
 
 h1 {
-    position: relative;
-    
-    
-    
-    
+    position: relative;    
 }
 h1:before {
     content: attr(data-text);
@@ -380,71 +375,54 @@ display: none
   /*background: linear-gradient(rgba(20, 239, 255, 0.2), rgba(20, 239, 255, 0.2)), url(img/kupci/3.jpg) center/cover no-repeat fixed;
   clip-path: polygon(0% 0%, 50% 0%,75% 100%, 0% 100%);*/
   min-height: 60vh;
-}
-
-#about-text {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  min-height: 70vh;
-  position: relative;
-  background: url(img/banner/mickey_banner_.jpg) center/cover no-repeat fixed;
-}
-
-.about-member {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;  
+}
+
+.typewriter{
+  display: flex;
+  justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  width: 70%;
-  margin: 60px auto 60px auto;
-  padding: 5px 5px;
-  background: var(--mainBlue);
-  opacity: 0.9;
-  border-radius: 20px;
-  min-height: 30vh;
+  min-height: 50vh;
+  text-align: center; 
+  background: var(--mainBlue); 
 }
 
-.about-member-heder {
-  flex: 1 0 50%;
-  text-align: center;
-  padding: 20px;
-  margin-top: 10px;
-  letter-spacing: 2px;
+.typewriter h1 {  
   color: var(--mainWhite);
-  line-height: 1.6rem;
-  font-size: 0.85rem;
+  background: var(--mainBlue);
+  font-size: 2rem;
+  padding: 20px;
+  font-family: monospace;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid var(--maninYellow); /* The typwriter cursor */
+  white-space: wrap; /* Keeps the content on a single line */
+  margin: 50px auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 10.5s steps(40, end),
+    blink-caret .5s step-end infinite;
 }
 
-.about-member-heder h2 {
-  text-transform: uppercase;
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: var(--maninYellow) }
+}
+
+@media screen and (max-width:776px) {
+  .typewriter h1 {  
+  font-size: 1rem;
   
 }
-
-.about-member-footer {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 80%;
-  border-top: 2px solid var(--maninYellow);
-  border-radius: 20px;
-  margin-top: 10px;
-  padding: 10px 0;
-  background: var(--mainWhite);
-  transition: background 2s ease;
-}
-
-.about-member-footer .fas {
-  color: var(--mainBlue);
-  font-size: 1.5em;
-  transition: transform 2s ease, color 2s ease, border-radius 2s ease;
-}
-
-.about-member-footer .fas:hover {
-  transform: scale(1.5);
-  border-radius: 3px;
-  color: var(--mainWhite);
-  background: var(--mainBlue);
-  cursor: pointer;
 }
 
 #about-text:after {
@@ -488,20 +466,16 @@ display: none
 }
 
 @media screen and (min-width:776px) {
-  
-
   .about-member {
     padding: 60px;
     margin: 80px auto 80px auto;
     width: 60%;
     min-height: 30vh;
   } 
-
   .about-member-heder {
     line-height: 4rem;
     font-size: 1.2rem;
   }
-
 }
 
 @media screen and (min-width:992px) {
@@ -518,22 +492,16 @@ display: none
     width: 60%;
     min-height: 50vh;
   }
-
   .about-member-heder {
     line-height: 3rem;
     font-size: 1.1rem;
   }
-
   .about-member-footer {
     width: 100%;
   }
-
   .about-member-footer .fas {
-
     font-size: 2.0em;
-
   }
-
 }
 
 
@@ -557,23 +525,6 @@ display: none
 .current-item img:hover {
   opacity: 0.5;
 }
-
-/*@media screen and (min-width:576px){
-    #current-center{
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
-    .current-item{
-        flex:0 0 50%; 
-    }
-}
-
-@media screen and (min-width:992px){
-    .current-item{
-        flex:0 0 25%; 
-    }
-}*/
 
 @media screen and (min-width: 576px) {
   #current-center {
@@ -613,25 +564,6 @@ display: none
 .number h3 {
   text-transform: uppercase;
 }
-
-/*@media screen and (min-width:576px){
-    #numbers{
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
-
-    .number{
-        flex:0 0 50%;
-    }
-}
-
-@media screen and (min-width:992px){
-    
-    .number{
-        flex:0 0 25%;
-    }
-}*/
 
 @media screen and (min-width: 576px) {
   #numbers {
@@ -723,26 +655,6 @@ display: none
   color: var(--mainBlue);
 }
 
-/*@media screen and (min-width:576px){
-#team-center{
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.team-member{
-  flex: 0 0 calc(50% - 1em);
-}
-
-}
-
-@media screen and (min-width:992px){
-
-.team-member{
-  flex: 0 0 calc(25% - 1em);
-}
-
-}*/
-
 @media screen and (min-width:576px) {
   #team-center {
     display: grid;
@@ -760,77 +672,94 @@ display: none
 
 .section-group {
   display: flex;
-  flex-direction: column-reverse;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: stretch;
+  flex-direction: column;
+  
+   
+}
+.form{
+ padding: 10px;
+ margin: 15px;
 }
 
-.map {
-  display: none;
-  flex: 0 0 50%;
+.contact-member{
+ display: none;
+ flex-direction: column;
+ flex-wrap: wrap;
+ justify-content: space-around; 
+ align-items: center;
+ justify-self: center;
+ width: 450px;
+ height: 450px;
+ align-self: stretch;
+ text-align: center;
+ background: var(--mainBlue);
+ color: var(--mainWhite);
+ order:1;
+ padding: 10px;
+ margin: 15px;
+ margin-top: -25px;
+ border-radius: 50%; 
+}
+.contact-member-heder{
+  font-size: 1.3rem;
+  line-height: 3rem;
+  letter-spacing: 5px;
+  
+}
+.contact-member-heder h1{
+  text-transform: uppercase;
+
+}
+
+.contact-member-footer{
+  font-size: 4rem;
+}
+
+.contact-member-footer i{
+  animation-iteration-count: infinite;
+  animation-delay: 2s;
+}
+
+.contact-form { 
+  width:80%;     
+}
+
+
+@media screen and (min-width:1280px) {
+.section-group {
+  display: grid;
+  grid-template-columns: 1.3fr 0.7fr;
+  grid-column-gap: 10px;  
+}  
+.contact-member{
+ display: flex;
+ flex-direction: column;
+ flex-wrap: wrap;
+ justify-content: space-around; 
+ align-items: center;
+ justify-self: center;
+ width: 450px;
+ height: 450px;
+ align-self: stretch;
+ text-align: center;
+ background: var(--mainBlue);
+ color: var(--mainWhite);
+ order:1;
+ padding: 10px;
+ margin: 15px;
+ margin-top: -25px;
+ border-radius: 50%; 
+}
+.contact-form {  
+  order:0;
+  justify-self: center;
   width: 80%;
-  margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 20px;
+  align-self: center;     
 }
-
-.contact-form {
-  height: 50vh;
-  flex: 0 0 50%;
-  width: 80%;
-  margin: 0 auto;
 }
+ 
 
-#gmap_canvas {
-  width: 100%;
-  height: 100%;
-  border: 3px solid var(--mainBlue);
-}
-
-/*@media screen and (min-width:576px){
-  .map{
-    
-    width: 60%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    
-    }
-
-    .contact-form {
-    width: 60%;
-      
-    }
-}*/
-
-
-@media screen and (min-width:992px) {
-  .section-group {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-bottom: 10px;
-
-
-  }
-
-  .map {
-    display: inline-block;
-    width: 80%;
-    margin: 0 auto;
-    height: 100%;
-    order: 1;
-
-  }
-
-  .contact-form {
-    width: 80%;
-    margin: 0 auto;
-    order: 0;
-  }
-
-
-}
-
+  
 input[type=text],
 input[type=email],
 select,
@@ -839,7 +768,6 @@ textarea {
   padding: 7px;
   border-radius: 3px;
   border: 2px solid var(--mainBlue);
-
 }
 
 textarea {
@@ -849,6 +777,7 @@ textarea {
 input[type=submit] {
   display: inline-block;
   padding: 10px 30px;
+  margin-bottom: 10px;
   font-weight: 700;
   text-decoration: none;
   background: var(--mainBlue);
@@ -915,18 +844,15 @@ footer {
 
 .footer-icons {
   font-size: 25px;
-
 }
 
 @media screen and (max-width:478px) {
   .footer-icons {
     font-size: 20px;
-
   }
 
   .footer-text {
     font-size: 8px;
-
   }
 }
 
@@ -940,5 +866,4 @@ footer {
 .footer-icons .fab:hover {
   color: var(--mainColor);
   transform: translateY(-15px);
-
 }
