--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400,700|Roboto&display=swap");
-/* font-family: 'Roboto', sans-serif;*/
+@import url('https://fonts.googleapis.com/css?family=Lato|Montserrat|Roboto&display=swap');
+/* font-family: 'Roboto', sans-serif;
+font-family: 'Lato', sans-serif;
+font-family: 'Montserrat', sans-serif;*/
 
 * {
   margin: 0;
@@ -30,7 +32,7 @@
 
 body,
 html {
-  font-family: "Lato", sans-serif;
+  font-family: "Montserrat", sans-serif;
   background: var(--mainWhite);
 }
 
@@ -168,10 +170,11 @@ header {
 }
 
 .banner-text h3 {
-  text-transform: capitalize;
+  text-transform: uppercase;
   margin: 10px 0;
   font-size: 30px;
   color: var(--secondColor);
+  font-family: 'Lato', sans-serif;
 }
 
 .banner-text span {
@@ -183,8 +186,9 @@ header {
   display: inline-block;
   margin: 10px;
   text-decoration: none;
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 25px;
+  font-weight: 800;
   padding: 10px;
   color: var(--mainColor);
   border: 3px solid var(--mainColor);
