commit promena bannnera

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ font-family: 'Montserrat', sans-serif;*/
   --mainCream: #eddea4;
   --mainWhite: #f5f3f5;
   --secondColor: #d9e5d9;
-  --mainRose: rgb(229,0,82);
+  --mainRose: #e50052;
   --mainwhiteGrey: rgb(223,220,222);
   --mainwhitePink: rgb(250,191,196);
   --maindarkBlue: rgb(19,50,117);
@@ -44,12 +44,16 @@ html {
 }
 
 section {
-  min-width: 100vw;
-  
+  min-width: 100vw;    
+}
+
+header {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
+    url(img/banner/mickey_banner_.jpg) center/cover fixed no-repeat;
 }
 
 #nav{
-  background: transparent;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8))
 }
 
 #nav ul {
@@ -64,28 +68,61 @@ section {
 #nav ul li:last-of-type a {
   flex: 1 0 auto;
   text-align-last: center;
+  color: var(--mainBlue);
+}
+
+#nav ul li:last-of-type a i.fab.fa-instagram{
+  color: var(--mainColor);
+  transition: color 2s ease;
+}
+
+#nav ul li:last-of-type a i.fab.fa-instagram:hover{
+  color: var(--mainWhite);
 }
 
 #nav ul li a {
   text-decoration: none;
   text-transform: uppercase;
-  display: block;
-  color: var(--mainColor);
+  display: block;  
   background: transparent;
   padding: 10px;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 900;
-  transition: color 2s ease, background 2s ease;
+  transition: color 2s ease;
+}
+
+#nav-links-i {
+  color: var(--mainColor);
+}
+
+#nav-links-ii {
+  color: var(--mainOrange);
+}
+
+#nav-links-iii {
+  color: var(--mainBlue);
+}
+
+#nav-links-iv {
+  color: var(--mainRose);
+}
+
+#nav-links-v {
+  color: var(--mainGreen);
+}
+
+#nav-links-vi {
+  color: var(--mainColor);
 }
 
 #nav ul li a:hover {
-  color: var(--mainWhite);
-  background: var(--mainColor);
+  color: var(--mainWhite);  
 }
 
 .nav-logo {
   background: transparent;
   padding: 10px;
+  margin-right: 15px;
   display: flex;
   justify-content: space-between;
 }
@@ -93,12 +130,13 @@ section {
 .nav-logo .fas {
   align-self: center;
   padding: 10px;
-  font-size: 25px;
+  font-size: 35px;
   cursor: pointer;
+  color: var(--mainwhitePink);
 }
 
 .new-nav {
-  background: var(--mainWhite)!important;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8));
   position: fixed;
   width: 100vw;
   z-index: 10 !important;
@@ -108,7 +146,7 @@ section {
   #nav {
     border-top: 5px solid var(--mainBlue);
     display: flex;
-    background: transparent;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8))
   }
 
   #nav ul {
@@ -144,8 +182,8 @@ header {
 
 #banner {
   flex: 1 0 auto;
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
-    url(img/banner/mickey_banner_.jpg) center/cover fixed no-repeat;
+  /*background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
+    url(img/banner/mickey_banner_.jpg) center/cover fixed no-repeat;*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -155,25 +193,55 @@ header {
 .banner-text h1 {
   text-transform: uppercase;
   color: var(--mainColor);
-  font-size: 60px;
+  font-size: 5.5rem;
   font-style: italic;
-  text-decoration: underline;
+  /*text-decoration: underline;*/
   animation-delay: 2s;
 }
 
-.banner-text #ban {
+.banner-text #le {
+  text-transform: uppercase;
+  color: var(--maninYellow);
+  
+}
+
+.banner-text #ba {
   text-transform: uppercase;
   color: var(--mainBlue);
-  font-size: 60px;
+  font-size: 7rem;
   font-style: italic;
-  text-decoration: underline;
+  /*text-decoration: underline;*/
+}
+
+.banner-text #lo {
+  text-transform: uppercase;
+  color: var(--mainRose);
+  font-size: 7rem;
+  font-style: italic;
+  /*text-decoration: underline;*/
+}
+
+.banner-text #ni {
+  text-transform: uppercase;
+  color: var(--mainGreen);
+  font-size: 7rem;
+  font-style: italic;
+  /*text-decoration: underline;*/
+}
+
+.banner-line{
+  width: 90%;
+  height: 6px;
+  background: linear-gradient(to right, #f52929, #ffc914, #00a3da, #e50052, #84bf41);  
+  /*border: 3px solid linear-gradient(rgba(255,2140,30, 0.3), rgba(30, 250, 140, 0.9));*/
+  margin: 15px auto;
 }
 
 .banner-text h3 {
   text-transform: uppercase;
   margin: 10px 0;
   font-size: 30px;
-  color: var(--secondColor);
+  color: var(--mainwhitePink);
   font-family: 'Lato', sans-serif;
 }
 
@@ -258,6 +326,14 @@ header {
   min-height: 90vh;
   background: linear-gradient(rgba(255, 201, 20, 0.3), rgba(255, 201, 20, 0.3)),
     url(img/proizvodi/Baloni_Nebo_1.jpg) center/cover no-repeat fixed;
+}
+
+#work .title{
+  background: var(--mainWhite);
+}
+
+#work .title-icon{
+  color: var(--mainRose);
 }
 
 .work-center {
@@ -549,6 +625,10 @@ display: none
   margin: 40px 0;
 }
 
+#current .title-icon{
+  color: var(--mainGreen);
+}
+
 .current-item {
   background: linear-gradient(var(--mainBlue), var(--mainBlue));
 }
@@ -588,7 +668,7 @@ display: none
 
 .number:hover {
   background: var(--mainWhite);
-  color: var(--mainColor);
+  color: var(--mainGreen);
 }
 
 .number .fas {
