--- a/style.css
+++ b/style.css
@@ -913,7 +913,11 @@ input[type=submit]:hover {
 }
 
 input[type=checkbox] {
-  margin: 10px 5px 10px 0;
+  margin: 10px 5px 10px 10px;
+}
+
+input[type=file] {
+  margin: 10px 5px 10px 10px;
 }
 
 .form-button {
@@ -970,8 +974,6 @@ input[type=submit] {
     width: 60%;
 
   }
-
-
 }
 
 @media screen and (min-width:1280px) {
@@ -1014,7 +1016,7 @@ input[type=submit] {
     align-content: center;
     width: 60%;
 
-  }
+  }  
 }
 
 footer {
