--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ header {
   }
 
   .nav-logo img {
-  width: 145px;;
+  width: 145px;
   height: 85px;  
 }
 
@@ -893,6 +893,7 @@ h1:before {
 
 input[type=text],
 input[type=email],
+input[type=tel],
 select,
 textarea {
   width: 100%;
@@ -1023,8 +1024,8 @@ input[type=submit] {
   }
 
   .contact-member img {
-    width: 90%;
-    height: 90%;
+    width: 80%;
+    height: 50%;
   }
 
   .contact-form {
